# std-nfc

./: .gitignore  README.md
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_auth.py  0002_cards_schema.py  0003_import_jobs.py  0004_scan_events.py  0005_acl_audit.py  0006_feedback_messages.py  0007_seed_default_templates.py  0008_card_contacts.py  0009_tpl_default.py  0010_tpl_is_default.py  0011_card_messages.py  0012_internal_blocks_and_hide_flags.py  0013_avatar_color_gradient.py  0014_logo_shape.py  0015_field_order.py  0016_membership_no_unique.py  0017_label_presets.py  0018_label_preset_type.py  0019_user_last_totp_step.py  0020_user_name.py  0021_slug_allow_dot.py  0022_unaccent_schema_qualified.py  0023_standard_category.py  0024_rename_default_template.py
backend/scripts/: build_og_default.py
backend/src/std_cards/: config.py  logo_presets.py  main.py  worker_main.py
backend/src/std_cards/api/: deps.py  exception_handlers.py  middleware.py
backend/src/std_cards/core/: color.py  exceptions.py  geoip.py  image_fetch.py  mailer.py  metrics.py  net.py  ratelimit.py  security.py  slug.py  templating.py  totp.py  translations.py  ua.py  uploads.py
backend/src/std_cards/db/: base.py  partitions.py  session.py
backend/src/std_cards/infrastructure/: minio.py
backend/src/std_cards/models/: admin.py  analytics.py  audit.py  auth.py  card.py  card_message.py  feedback.py  import_job.py  label_preset.py  template.py
backend/src/std_cards/seed/: seed.py  seed_faker.py  seed_perf.py
backend/src/std_cards/services/: __init__.py  admin_service.py  analytics_report.py  (+10 more)
backend/tests/: conftest.py  test_acl.py  test_admin_service.py  test_analytics_service.py  test_api_admins.py  test_api_analytics.py  test_api_auth.py  test_api_cards.py  test_api_imports.py  test_api_templates.py  test_audit_repo.py  test_auth_service.py  test_card_filters.py  test_card_messages.py  test_card_models.py  test_card_repo.py  test_card_service.py  test_health.py  test_imports.py  test_login_challenge_repo.py  test_logo_presets.py  test_media.py  test_og.py  test_partitions.py  test_password_reset_repo.py  test_public_card.py  test_ratelimit.py  test_refresh_token_repo.py  test_scan_consumer.py  test_scan_repo.py  test_security.py  test_templates.py  test_totp.py  test_user_repo.py
(+168 files in other folders)
