[project]
name = "std-cards"
version = "0.1.0"
description = "STD member cards web application"
requires-python = ">= 3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "aiosmtplib>=3.0.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
    "pyotp>=2.9.0",
    "jinja2>=3.1.0",
    "boto3>=1.35.0",
    "nats-py>=2.9.0",
    "Pillow>=11.0.0",
    "openpyxl>=3.1.0",
    "loguru>=0.7.0",
    "greenlet>=3.0.0",
    "python-multipart>=0.0.12",
    "ua-parser>=1.0.0",
    "maxminddb>=2.6.0",
    "qrcode[pil]>=8.0.0",
    "orjson>=3.10.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.15.0",
    "faker>=33.0.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.15.0",
    "faker>=33.0.0",
]

[tool.rye.scripts]
lint = { chain = ["ruff check src/", "ruff format --check src/", "pyrefly check src/"] }
format = "ruff format src/"
test = "pytest"
test-cov = "pytest --cov=std_cards --cov-report=term-missing"
dev-api = "uvicorn std_cards.main:app --reload --host 0.0.0.0 --port 8000"
dev-worker = "python -m std_cards.worker_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/std_cards"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/std_cards/api/**" = ["B008"]
"src/std_cards/api/deps.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyrefly]
project_includes = ["src"]
